--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,73 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Media Licensing Lab</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
+    <link rel="stylesheet" href="dist/styles/bootstrap-466c576b6a.css"/>
 
-    <!-- Font-Awesome -->
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="dist/styles/styles-60760512d0.css"/>
 
-    <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
-
-    <!-- Custom -->
-    <link rel="stylesheet" href="source/styles/styles.css">
 </head>
 <body ng-app="mllApp">
+
     <mll-application></mll-application>
 
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="dist/scripts/jquery-5eccfcbd5b.js"></script>
 
-    <!-- Bootstrap -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="dist/scripts/bootstrap-84eef983ad.js"></script>
 
-    <!-- Angular -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="dist/scripts/angular-27ea853a07.js"></script>
 
-    <!-- Custom -->
-    <script src="source/scripts/app.js"></script>
-    <script src="source/scripts/app.config.js"></script>
+    <script src="dist/scripts/app-templates-02058ec332.js"></script>
 
-    <script src="source/scripts/components/app.controller.js"></script>
-    <script src="source/scripts/components/app.directive.js"></script>
-
-    <script src="source/scripts/modules/header/header.module.js"></script>
-    <script src="source/scripts/modules/header/components/header.controller.js"></script>
-    <script src="source/scripts/modules/header/components/header.directive.js"></script>
-
-    <script src="source/scripts/modules/footer/footer.module.js"></script>
-
-    <script src="source/scripts/modules/picker/picker.module.js"></script>
-    <script src="source/scripts/modules/picker/components/hdd-file-reader.controller.js"></script>
-    <script src="source/scripts/modules/picker/components/hdd-file-reader.directive.js"></script>
-    <script src="source/scripts/modules/picker/components/dropbox-file-reader.controller.js"></script>
-    <script src="source/scripts/modules/picker/components/dropbox-file-reader.directive.js"></script>
-    <script src="source/scripts/modules/picker/components/file-selector.controller.js"></script>
-    <script src="source/scripts/modules/picker/components/file-selector.directive.js"></script>
-
-    <script src="source/scripts/modules/upload/upload.module.js"></script>
-    <script src="source/scripts/modules/upload/components/music-agreement-form.controller.js"></script>
-    <script src="source/scripts/modules/upload/components/music-agreement-form.directive.js"></script>
-    <script src="source/scripts/modules/upload/components/music-file-form.controller.js"></script>
-    <script src="source/scripts/modules/upload/components/music-file-form.directive.js"></script>
-    <script src="source/scripts/modules/upload/components/music-general-information-form.controller.js"></script>
-    <script src="source/scripts/modules/upload/components/music-general-information-form.directive.js"></script>
-    <script src="source/scripts/modules/upload/components/music-owner-information-form.controller.js"></script>
-    <script src="source/scripts/modules/upload/components/music-owner-information-form.directive.js"></script>
-    <script src="source/scripts/modules/upload/components/music-sound-information-form.controller.js"></script>
-    <script src="source/scripts/modules/upload/components/music-sound-information-form.directive.js"></script>
-    <script src="source/scripts/modules/upload/components/music-file-uploader.controller.js"></script>
-    <script src="source/scripts/modules/upload/components/music-file-uploader.directive.js"></script>
-
-    <script src="source/scripts/modules/shared/shared.module.js"></script>
-    <script src="source/scripts/modules/shared/components/scrollable-agreement.controller.js"></script>
-    <script src="source/scripts/modules/shared/components/scrollable-agreement.directive.js"></script>
+    <script src="dist/scripts/app-f5d0440680.js"></script>
 
     <!-- Dropbox -->
     <script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="5fzamm0lu50vbcq"></script>
