Updated the home page for testing end to end flow

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,5 +27,9 @@
     <!-- Dropbox -->
     <script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="5fzamm0lu50vbcq"></script>
 
+<form action="/MLL/SubmissionServlet" method="post">
+<input type="button" value="submit">
+</form>
+
 </body>
 </html>
