--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,7 +28,7 @@
     <script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="5fzamm0lu50vbcq"></script>
 
 <form action="/MLL/SubmissionServlet" method="post">
-<input type="button" value="submit">
+<input type="submit" value="submit">
 </form>
 
 </body>
