--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -35,6 +35,7 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="../bower_components/angular-mocks/angular-mocks.js"></script>
     <!-- endbuild -->
 
     <!-- build:jsTemplates dist/scripts/app-templates.js -->
