--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -64,6 +64,7 @@
     <script src="scripts/modules/picker/components/file-selector.directive.js"></script>
 
     <script src="scripts/modules/upload/upload.module.js"></script>
+    <script src="scripts/modules/upload/upload.globals.js"></script>
     <script src="scripts/modules/upload/components/music-agreement-form.controller.js"></script>
     <script src="scripts/modules/upload/components/music-agreement-form.directive.js"></script>
     <script src="scripts/modules/upload/components/music-file-form.controller.js"></script>
