Upload component is refactored;

--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -65,6 +65,7 @@
 
     <script src="scripts/modules/upload/upload.module.js"></script>
     <script src="scripts/modules/upload/upload.globals.js"></script>
+    <script src="scripts/modules/upload/services/music-upload.service.js"></script>
     <script src="scripts/modules/upload/components/music-agreement-form.controller.js"></script>
     <script src="scripts/modules/upload/components/music-agreement-form.directive.js"></script>
     <script src="scripts/modules/upload/components/music-file-form.controller.js"></script>
