--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -59,7 +59,11 @@
     <script src="scripts/modules/footer/footer.module.js"></script>
 
     <script src="scripts/modules/login/login.module.js"></script>
+    <script src="scripts/modules/login/login.globals.js"></script>
     <script src="scripts/modules/login/controllers/login.controller.js"></script>
+    <script src="scripts/modules/login/services/login.service.js"></script>
+    <script src="scripts/modules/login/components/common-login-form.controller.js"></script>
+    <script src="scripts/modules/login/components/common-login-form.directive.js"></script>
 
     <script src="scripts/modules/home/home.module.js"></script>
 
