--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -65,6 +65,12 @@
     <script src="scripts/modules/login/components/common-login-form.controller.js"></script>
     <script src="scripts/modules/login/components/common-login-form.directive.js"></script>
 
+    <script src="scripts/modules/registration/registration.module.js"></script>
+    <script src="scripts/modules/registration/registration.globals.js"></script>
+    <script src="scripts/modules/registration/services/registration.service.js"></script>
+    <script src="scripts/modules/registration/components/user-registration-form.controller.js"></script>
+    <script src="scripts/modules/registration/components/user-registration-form.directive.js"></script>
+
     <script src="scripts/modules/home/home.module.js"></script>
 
     <script src="scripts/modules/picker/picker.module.js"></script>
