--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -67,6 +67,7 @@
 
     <script src="scripts/modules/registration/registration.module.js"></script>
     <script src="scripts/modules/registration/registration.globals.js"></script>
+    <script src="scripts/modules/registration/controllers/user-registration.controller.js"></script>
     <script src="scripts/modules/registration/services/registration.service.js"></script>
     <script src="scripts/modules/registration/components/user-registration-form.controller.js"></script>
     <script src="scripts/modules/registration/components/user-registration-form.directive.js"></script>
@@ -101,6 +102,7 @@
     <script src="scripts/modules/shared/components/scrollable-agreement.controller.js"></script>
     <script src="scripts/modules/shared/components/scrollable-agreement.directive.js"></script>
     <script src="scripts/modules/shared/services/authentication.service.js"></script>
+    <script src="scripts/modules/shared/services/invite-token.service.js"></script>
     <!-- endbuild -->
 
     <!-- Dropbox -->
