Login and Auth Fixes

--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -101,6 +101,7 @@
     <script src="scripts/modules/shared/shared.module.js"></script>
     <script src="scripts/modules/shared/components/scrollable-agreement.controller.js"></script>
     <script src="scripts/modules/shared/components/scrollable-agreement.directive.js"></script>
+    <script src="scripts/modules/shared/services/auth-details.service.js"></script>
     <script src="scripts/modules/shared/services/authentication.service.js"></script>
     <script src="scripts/modules/shared/services/invite-token.service.js"></script>
     <!-- endbuild -->
