--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -73,6 +73,9 @@
     <script src="scripts/modules/registration/components/user-registration-form.directive.js"></script>
 
     <script src="scripts/modules/home/home.module.js"></script>
+    <script src="scripts/modules/home/controllers/user-features.controller.js"></script>
+    <script src="scripts/modules/home/components/invite-form.controller.js"></script>
+    <script src="scripts/modules/home/components/invite-form.directive.js"></script>
 
     <script src="scripts/modules/picker/picker.module.js"></script>
     <script src="scripts/modules/picker/components/hdd-file-reader.controller.js"></script>
