Musician Registration Fixes

--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -68,6 +68,7 @@
     <script src="scripts/modules/registration/registration.module.js"></script>
     <script src="scripts/modules/registration/registration.globals.js"></script>
     <script src="scripts/modules/registration/controllers/user-registration.controller.js"></script>
+    <script src="scripts/modules/registration/controllers/musician-registration.controller.js"></script>
     <script src="scripts/modules/registration/services/registration.service.js"></script>
     <script src="scripts/modules/registration/components/user-registration-form.controller.js"></script>
     <script src="scripts/modules/registration/components/user-registration-form.directive.js"></script>
