--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -72,6 +72,8 @@
     <script src="scripts/modules/registration/services/registration.service.js"></script>
     <script src="scripts/modules/registration/components/user-registration-form.controller.js"></script>
     <script src="scripts/modules/registration/components/user-registration-form.directive.js"></script>
+    <script src="scripts/modules/registration/components/musician-registration-form.controller.js"></script>
+    <script src="scripts/modules/registration/components/musician-registration-form.directive.js"></script>
 
     <script src="scripts/modules/home/home.module.js"></script>
     <script src="scripts/modules/home/controllers/user-features.controller.js"></script>
