--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -77,6 +77,7 @@
 
     <script src="scripts/modules/home/home.module.js"></script>
     <script src="scripts/modules/home/controllers/user-features.controller.js"></script>
+    <script src="scripts/modules/home/controllers/musician-features.controller.js"></script>
     <script src="scripts/modules/home/components/invite-form.controller.js"></script>
     <script src="scripts/modules/home/components/invite-form.directive.js"></script>
 
