Client Suggestion Fixes; User Registration Draft Version; Unit Tests

--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -106,6 +106,7 @@
     <script src="scripts/modules/upload/components/music-file-uploader.directive.js"></script>
 
     <script src="scripts/modules/shared/shared.module.js"></script>
+    <script src="scripts/modules/shared/shared.globals.js"></script>
     <script src="scripts/modules/shared/components/scrollable-agreement.controller.js"></script>
     <script src="scripts/modules/shared/components/scrollable-agreement.directive.js"></script>
     <script src="scripts/modules/shared/components/input-match.directive.js"></script>
